--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ body{
     background-attachment: fixed;
     margin: auto 0;
 }
+
+
 h1, h2{
     text-align: center;
     font-size: 3em;
@@ -41,6 +43,23 @@ h1, h2{
     }
   }
 
+@keyframes backcolorchange {
+    25% {
+      background-color:#F725A0;
+    }
+    0% {
+        background-color:#0CB2C0 ;
+      }
+    70% {
+        background-color:  #FAD141;
+      }
+    100% {
+        background-color: #E8E6D9;
+      }
+    50% {
+      background-color:#00FF00 ;
+    }
+  }
 #input-wrap{
     display: flex;
     justify-content: center;
@@ -64,13 +83,40 @@ h3{
         -1px 1px 0 #000,
         1px 1px 0 #000;
 }
+.direction-wrap{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+  .direction{
+    border: 2px solid black;
+  cursor: pointer;
+  margin: 0 3px;
+  padding: 8px;
+  border-radius: 50%;
+  background-color: #f0f0f0;
+  display: flex;
+  align-items: center;
+}
+.lb{transform: rotate(-45deg);}
+.lt{transform: rotate(45deg);}
+.t{transform: rotate(90deg);}
+.b{transform: rotate(270deg);}
+.rt{transform: rotate(135deg);}
+.rb{transform: rotate(225deg);}
+.r{transform: rotate(180deg);}
 
+input[type="radio"]{
+    display: none;
+}
+.direction:hover{
+  background-color: #9ab3f5;
+}
+input[type="radio"]:checked+label{ background-color: #fecd1a;} 
 .btn{
     display: flex;
     justify-content: center;
 }
-
-
 input[type="color"] {
 	-webkit-appearance: none;
 	border: none;
@@ -85,32 +131,53 @@ input[type="color"]::-webkit-color-swatch {
 }
 #button{
     color: black;
-    font-weight: 600;
+    font-weight: 100;
     background-color: black;
     border: solid 2px white;
     border-radius: 5px;
-    padding: 10px;
+    padding: 6px;
     font-family: cursive;
-    font-size: 1.5em;
+    font-size: 1em;
     animation: backcolorchange 1s infinite;
 }
-@keyframes backcolorchange {
-    25% {
-      background-color:#F725A0;
-    }
-    0% {
-        background-color:#0CB2C0 ;
-      }
-    70% {
-        background-color:  #FAD141;
-      }
-    100% {
-        background-color: #E8E6D9;
-      }
-    50% {
-      background-color:#00FF00 ;
-    }
-  }
+.tooltip {
+  position: relative;
+  display: inline-block;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 140px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px;
+  position: absolute;
+  z-index: 1;
+  bottom: 150%;
+  left: 50%;
+  margin-left: -75px;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.tooltip .tooltiptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+  opacity: 1;
+}
+
 #button:hover{
     color: white;
     background-color: rgba(20, 19, 19, 0.911);
@@ -145,5 +212,20 @@ label{
     1px -1px 0 #000,
     -1px 1px 0 #000,
     1px 1px 0 #000;
-
     }
+@media screen and (max-width: 700px) {
+  h1{
+    font-size: 2em;
+  }
+  h2{
+    font-size: 1.7em;
+  }
+  h3{
+    font-size: 1em;
+  }
+  .direction{
+    margin: .5px;
+    padding: 1px;
+    font-size: 1em;
+  }
+} 
